07_组件实例三大属性2_props

--- a/05_react中定义组件/1_函数式组件.html
+++ b/05_react中定义组件/1_函数式组件.html
@@ -27,8 +27,8 @@
         ReactDOM.render(<Demo/>,document.getElementById('test'))
 
         /* 
-            执行了ReactDOM.render(<MyComponent4>.......之后，发生了什么?
-            1. React解析组件标签,找到了MyComponent组件。
+            执行了ReactDOM.render(<Demo/>.......之后，发生了什么?
+            1. React解析组件标签,找到了Demo组件。
             2. 发现组件是使用函数定义的，随后调用该函数，将返回的虚拟DOM转为真实DOM，随后呈现在页面中。
 
         */
