--- a/复习/4_展开运算符.html
+++ b/复习/4_展开运算符.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script type="text/javascript">
-        let arr1=[1,3,5,7,9]
-        let arr2=[2,4,6,8,10]
+        let arr1 = [1, 3, 5, 7, 9]
+        let arr2 = [2, 4, 6, 8, 10]
         console.log(...arr1);
-        let arr3=[...arr1,...arr2]
+        let arr3 = [...arr1, ...arr2]
         console.log(...arr3);
-        function sum(...numbers){
-            return numbers.reduce((preValue,currentValue)=>{
-                return preValue+currentValue
+        // 参数不固定时
+        function sum(...numbers) {
+            return numbers.reduce((preValue, currentValue) => {
+                return preValue + currentValue
             })
         }
-        console.log(sum(1,2,3,4))
+        console.log(sum(1, 2, 3, 4));
+
+        // 构造字面量对象时使用展开语法
+        let person = {
+            name: 'tom',
+            age: '18'
+        }
+        // console.log(person); 报错
+        // 克隆了对象
+        let person2 = { 
+            ...person
+        }
+        console.log(person2);
+
+        // 合并了对象
+        let person3 = { 
+            ...person,
+            name:'jack'
+        }
+        console.log(person3);
     </script>
 </body>
+
 </html>
