--- a/08_组件实例三大属性3_refs与事件处理/5_事件处理.html
+++ b/08_组件实例三大属性3_refs与事件处理/5_事件处理.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>回调ref中调用次数问题</title>
+        <title>createRef</title>
     </head>
 
     <body>
@@ -18,39 +18,27 @@
 
         <script type="text/babel">
             class Demo extends React.Component {
-                state = { isHot: false }
-
+                /* 
+                    (1) .通过onXxx属性指定事件处理函数(注意大小写)
+                        a.React使用的是自定义(合成)事件，而不是使用的原生DOM事件-----为了更好的兼容性
+                        b.React中的事件是通过事件委托方式处理的(委托给组件最外层的元素)-----为了高效
+                    (2) .通过event.target得到发生事件的DOM元素对象-----不要过度使用ref
+                 */
+                myRef = React.createRef()
+                myRef2 = React.createRef()
                 showData = () => {
-                    const { input1 } = this
-                    alert(input1.value)
+                    alert(this.myRef.current.value)
                 }
 
-                changeWeather = () => {
-                    // 获取原来的状态
-                    const { isHot } = this.state
-                    this.setState({ isHot: !isHot })
-                }
-
-                saveInput = c => {
-                    this.input1 = c
-                    console.log('@', c)
+                showData2 = (e) => {
+                    alert(e.target.value)
                 }
 
                 render() {
-                    const { isHot } = this.state
                     return (
                         <div>
-                            <h2>今天天气很{isHot ? '炎热' : '凉爽'}</h2>
-                            {/*<input
-                                ref={(c) => {
-                                    this.input1 = c;
-                                    console.log('@', c);
-                                }}
-                                type='text'
-                                placeholder='点击按钮提示数据'
-                              />*/}
                             <input
-                                ref={this.saveInput}
+                                ref={this.myRef}
                                 type='text'
                                 placeholder='点击按钮提示数据'
                             />
@@ -59,10 +47,11 @@
                                 点我提示左侧数据
                             </button>
                             &nbsp;
-                            <button onClick={this.changeWeather}>
-                                点我改变天气
-                            </button>
-                            &nbsp; &nbsp;
+                            <input
+                                onBlur={this.showData2}
+                                type='text'
+                                placeholder='点击按钮提示数据'
+                            />
                         </div>
                     )
                 }
