--- a/09_收集表单数据/2_受控组件.html
+++ b/09_收集表单数据/2_受控组件.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>非受控组件</title>
+    <title>受控组件</title>
   </head>
   <body>
     <!-- 准备一个容器 -->
@@ -17,23 +17,35 @@
 
     <script type="text/babel">
       class Login extends React.Component {
-        handleSubmit = (event) => {
+        // 初始化状态
+        static = {
+          username: '', // 用户名
+          password: '', // 密码
+        }
+
+        // 保存用户名
+        saveUsername = event => {
+          this.setState({ username: event.target.value })
+        }
+
+        // 保存密码
+        savePassword = event => {
+          this.setState({ password: event.target.value })
+        }
+
+        handleSubmit = event => {
           event.preventDefault() // 阻止表单提交
-          const { username, password } = this
-          alert(`你输入的用户名是：${username.value},你输入的密码是：${password.value}`)
+          const { username, password } = this.static
+          alert(`你输入的用户名是：${username},你输入的密码是：${password}`)
         }
         render() {
           return (
             <form onSubmit={this.handleSubmit}>
               用户名：
-              <input
-                ref={c => (this.username = c)}
-                type='test'
-                name='username'
-              />
+              <input onChange={this.saveUsername} type='test' name='username' />
               密码：
               <input
-                ref={c => (this.password = c)}
+                onChange={this.savePassword}
                 type='password'
                 name='password'
               />
