--- a/10_高阶函数_函数柯里化/1_高阶函数_函数柯里化.html
+++ b/10_高阶函数_函数柯里化/1_高阶函数_函数柯里化.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>非受控组件</title>
+    <title>高阶函数_函数柯里化</title>
   </head>
   <body>
     <!-- 准备一个容器 -->
@@ -16,24 +16,45 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <script type="text/babel">
+      /*
+        高阶函数:如果一个函数符合下面2个规范中的任何-一个，那该函数就是高阶函数。
+          1.若A函数，接收的参数是一个函数， 那么A就可以称之为高阶函数。
+          2.若A函数，调用的返回值依然是一个函数， 那么A就可以称之为高阶函数。
+          常见的高阶函数有: Promise. setTimeout. arr .map()等等
+        函数的柯里化:通过函数调用继续返回函数的方式，实现多次接收函数最后统一处理的函数编码形式。
+      */
       class Login extends React.Component {
-        handleSubmit = (event) => {
+        // 初始化状态
+        state = {
+          username: '', // 用户名
+          password: '', // 密码
+        }
+
+        // 高级函数
+        saveFormData = dataType => {
+          return event => {
+            // console.log(dataType, event.target.value)
+            this.setState({ [dataType]: event.target.value })
+          }
+        }
+
+        handleSubmit = event => {
           event.preventDefault() // 阻止表单提交
-          const { username, password } = this
-          alert(`你输入的用户名是：${username.value},你输入的密码是：${password.value}`)
+          const { username, password } = this.state
+          alert(`你输入的用户名是：${username},你输入的密码是：${password}`)
         }
         render() {
           return (
             <form onSubmit={this.handleSubmit}>
               用户名：
               <input
-                ref={c => (this.username = c)}
+                onChange={this.saveFormData('username')}
                 type='test'
                 name='username'
               />
               密码：
               <input
-                ref={c => (this.password = c)}
+                onChange={this.saveFormData('password')}
                 type='password'
                 name='password'
               />
