--- a/11_组件的生命周期/3_react生命周期(新) .html
+++ b/11_组件的生命周期/3_react生命周期(新) .html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>2_react生命周期(旧)</title>
+    <title>3_react生命周期(新)</title>
   </head>
   <body>
     <!-- 准备一个容器 -->
     <div id="test"></div>
 
-    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/react/17.0.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/prop-types@15.8.1/prop-types.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/react-dom/17.0.0/umd/react-dom.development.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/babel-standalone/7.0.0-beta.0/babel.min.js"></script>
 
     <script type="text/babel">
       class Count extends React.Component {
@@ -39,7 +39,7 @@
         }
 
         // 组件将要挂载的钩子
-        componentWillMount() {
+        UNSAFE_componentWillMount() {
           console.log('Count---componentWillMount')
         }
 
@@ -60,7 +60,7 @@
         }
 
         // 组件将要更新的钩子
-        componentWillUpdate() {
+        UNSAFE_componentWillUpdate() {
           console.log('Count---componentWillUpdate')
         }
 
@@ -104,31 +104,15 @@
 
       class B extends React.Component {
         // 获取父组件传递过来的值
-        componentWillReceiveProps(props) {
+        UNSAFE_componentWillReceiveProps(props) {
           console.log('B---componentWillReceiveProps', props)
-        }
-
-        // 组件更新阀门的钩子
-        shouldComponentUpdate() {
-          console.log('B---shouldComponentUpdate')
-          return true
-        }
-
-        // 组件将要更新的钩子
-        componentWillUpdate() {
-          console.log('B---componentWillUpdate')
-        }
-
-        // 组件更新完毕的钩子
-        componentDidUpdate() {
-          console.log('B---componentDidUpdate')
         }
 
         render() {
           return <div>我是B组件，我的名字是{this.props.carName}</div>
         }
       }
-      ReactDOM.render(<A />, document.getElementById('test'))
+      ReactDOM.render(<Count />, document.getElementById('test'))
     </script>
   </body>
 </html>
