--- a/11_组件的生命周期/3_react生命周期(新) .html
+++ b/11_组件的生命周期/3_react生命周期(新) .html
@@ -14,6 +14,23 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/babel-standalone/7.0.0-beta.0/babel.min.js"></script>
 
     <script type="text/babel">
+      /*
+        1. 初始化阶段：由ReactDOM.render()方法触发---初次渲染
+          1. constructor()
+          2. getDerivedStateFromProps()
+          3. render()
+          4. componentDidMount() ==> 常用
+            一般在这个钩子中做一些初始化的事， 例如:开启定时器、发送网络请求、订阅消息
+        2. 更新阶段：由组件内部this.setState()或父组件render触发
+          1. getDerivedStateFromProps()
+          2. shouldComponentUpdate()
+          3. render()
+          4. getSnapshotBeforeUpdate()
+          5. componentDidUpdate() ==> 常用
+        3. 卸载组件：由ReactDom.unmountComponentAtNode触发
+          1. componentWillUnmount() ==> 常用
+            一般在这个钩子中做些收尾的事， 例如:关闭定时、取消订阅消息
+      */
       class Count extends React.Component {
         constructor(props) {
           console.log('Count---constructor')
@@ -38,11 +55,6 @@
           this.forceUpdate()
         }
 
-        // 组件将要挂载的钩子
-        UNSAFE_componentWillMount() {
-          console.log('Count---componentWillMount')
-        }
-
         // 组件挂载完毕的钩子
         componentDidMount() {
           console.log('Count---componentDidMount')
@@ -59,14 +71,25 @@
           return true
         }
 
-        // 组件将要更新的钩子
-        UNSAFE_componentWillUpdate() {
-          console.log('Count---componentWillUpdate')
+        // 组件更新完毕的钩子
+        componentDidUpdate(preProps, preState, snapshot) {
+          console.log(
+            'Count---componentDidUpdate',
+            preProps,
+            preState,
+            snapshot
+          )
         }
 
-        // 组件更新完毕的钩子
-        componentDidUpdate() {
-          console.log('Count---componentDidUpdate')
+        // 若state的值在任何时候都取决于props,那么可以使用
+        static getDerivedStateFromProps(props, state) {
+          console.log('Count---getDerivedStateFromProps', props, state)
+          return null
+        }
+
+        getSnapshotBeforeUpdate() {
+          console.log('Count---getSnapshotBeforeUpdate')
+          return '123'
         }
 
         render() {
@@ -82,37 +105,7 @@
           )
         }
       }
-
-      class A extends React.Component {
-        state = { carName: '奔驰' }
-
-        changeCar = () => {
-          this.setState({
-            carName: '宝马',
-          })
-        }
-        render() {
-          return (
-            <div>
-              <div>我是A组件</div>
-              <button onClick={this.changeCar}>换车</button>
-              <B carName={this.state.carName} />
-            </div>
-          )
-        }
-      }
-
-      class B extends React.Component {
-        // 获取父组件传递过来的值
-        UNSAFE_componentWillReceiveProps(props) {
-          console.log('B---componentWillReceiveProps', props)
-        }
-
-        render() {
-          return <div>我是B组件，我的名字是{this.props.carName}</div>
-        }
-      }
-      ReactDOM.render(<Count />, document.getElementById('test'))
+      ReactDOM.render(<Count name='123' />, document.getElementById('test'))
     </script>
   </body>
 </html>
