--- a/11_组件的生命周期/2_react生命周期(旧).html
+++ b/11_组件的生命周期/2_react生命周期(旧).html
@@ -14,6 +14,22 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <script type="text/babel">
+      /*
+        1. 初始化阶段：由ReactDOM.render()方法触发---初次渲染
+          1. constructor()
+          2. componentWillMount()
+          3. render()
+          4. componentDidMount() ==> 常用
+            一般在这个钩子中做一些初始化的事， 例如:开启定时器、发送网络请求、订阅消息
+        2. 更新阶段：由组件内部this.setState()或父组件render触发
+          1. shouldComponentUpdate()
+          2. componentWillUpdate()
+          3. render()
+          4. componentDidUpdate() ==> 常用
+        3. 卸载组件：由ReactDom.unmountComponentAtNode触发
+          1. componentWillUnmount() ==> 常用
+            一般在这个钩子中做些收尾的事， 例如:关闭定时、取消订阅消息
+      */
       class Count extends React.Component {
         constructor(props) {
           console.log('Count---constructor')
